BajiDeveloperEdition/src/objects/test_Custom_Object__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>test Custom Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>test Custom Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>